--- a/_posts/2019-08-05-Prague.md
+++ b/_posts/2019-08-05-Prague.md
@@ -11,7 +11,7 @@ image-sm: https://res.cloudinary.com/rosellaalucard/image/upload/v1565295365/R00
 
 第三天，说好了一觉睡到自然醒，无奈七点半就醒了，阳光争先恐后地从百叶窗里挤进来，我也睡不着了。
 
-清好行李，将钥匙放进信箱，我像着佩特任山走去。
+清好行李，将钥匙放进信箱，我向着佩特任山走去。
 
 刚一进佩特任山脚下的公园便看到一座惊奇的雕塑，走进发现上面写的是仅以此纪念被苏联社会主义毁掉的人。
 
