--- a/_posts/2019-08-10-Melk.md
+++ b/_posts/2019-08-10-Melk.md
@@ -51,6 +51,8 @@ image-sm: https://res.cloudinary.com/rosellaalucard/image/upload/v1565458804/R00
 
 ![R0002690](https://res.cloudinary.com/rosellaalucard/image/upload/v1565458794/R0002690_cbyckv.jpg)
 
+修道院的内部就非常无聊了。也许是因为我听不懂那个英文导游在说些什么#sigh
+
 出来之后是个花园餐厅，近一点了，索性吃个饭，思考一下之后去哪消磨时间。
 
 ![R0002709](https://res.cloudinary.com/rosellaalucard/image/upload/v1565458805/R0002709_byiqsg.jpg)
@@ -80,3 +82,5 @@ image-sm: https://res.cloudinary.com/rosellaalucard/image/upload/v1565458804/R00
 ![R0002734](https://res.cloudinary.com/rosellaalucard/image/upload/v1565458797/R0002734_puuogz.jpg)
 
 ![R0002735](https://res.cloudinary.com/rosellaalucard/image/upload/v1565458801/R0002735_gx8ujf.jpg)
+
+看来无所事事的生活也不好玩啊
