--- a/_posts/2019-08-10-Melk.md
+++ b/_posts/2019-08-10-Melk.md
@@ -77,7 +77,7 @@ image-sm: https://res.cloudinary.com/rosellaalucard/image/upload/v1565458804/R00
 
 ![R0002729](https://res.cloudinary.com/rosellaalucard/image/upload/v1565458793/R0002729_nod3jr.jpg)
 
-还是回酒店闲着好了，小镇宁静得有点吓人
+还是回酒店闲着好了，小镇宁静得有点瘆人
 
 ![R0002734](https://res.cloudinary.com/rosellaalucard/image/upload/v1565458797/R0002734_puuogz.jpg)
 
