--- a/_posts/2019-08-16-Gosau.md
+++ b/_posts/2019-08-16-Gosau.md
@@ -184,7 +184,7 @@ Paradise
 
 ![R0003130](/images/R0003130.JPG)
 
-阳光洒在树叶上、小草上，周围的一切绿的似乎溢出颜料来。
+阳光洒在树叶上、小草上，周围的一切绿的似乎溢出颜料来。在这美好的阳光下，让人难以相信世界上还有什么罪恶的事情，然而脑海中突然闪过阿加莎的《阳光下的罪恶》，内心一颤，我果然擅长自己吓自己。
 
 ![R0003131](/images/R0003131.JPG)
 
