--- a/_posts/2019-08-17-Salzburg.md
+++ b/_posts/2019-08-17-Salzburg.md
@@ -20,7 +20,7 @@ typora-root-url: ..
 
 ![R0003156](/images/R0003156.JPG)
 
-Scholoss Mirabell，简直就是迷你版的Scholoss Schonbrunn.
+Schloss Mirabell，简直就是迷你版的Schloss Schonbrunn.
 
 ![R0003157](/images/R0003157.JPG)
 
